# nacafoil

./: Cargo.toml  README.md
src/: lib.rs
src/four/: constants.rs  mod.rs
tests/: airfoil.rs  data.json  four_digit.rs
