[package]
name = "nacafoil"
version = "0.0.4"
edition = "2021"
license = "MIT"
description = "Programmatic drawing of NACA airfoils."
repository = "https://github.com/OwenShepherd/nacafoil"
homepage = "https://github.com/OwenShepherd/nacafoil"
readme = "README.md"
keywords = ["aerospace", "planes", "engineering", "naca", "airfoil"]
categories = ["aerospace", "science"]

[lib]
crate-type = ["lib"]

[dev-dependencies]
serde = "1.0.163"
